After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 788300 - daemon: Fix double free of GError
daemon: Fix double free of GError
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2017-09-28 17:58 UTC by Robert Ancell
Modified: 2017-09-28 17:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
daemon: Fix double free of GError (708 bytes, patch)
2017-09-28 17:58 UTC, Robert Ancell
none Details | Review

Description Robert Ancell 2017-09-28 17:58:38 UTC
The GError was freed and then accessed at the bottom of main() and freed again.
This only occurs if the command line parser fails.
Comment 1 Robert Ancell 2017-09-28 17:58:40 UTC
Created attachment 360623 [details] [review]
daemon: Fix double free of GError