daemon: Fix double free of GError

https://bugzilla.gnome.org/show_bug.cgi?id=788300